refactor: consolidate ranking apis
